--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <!-- Compiled and minified CSS -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <!-- Compiled and minified JavaScript -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    <title>Test JS</title>
 </head>
+
 <body>
-   <script src="test1.js"></script>
+   <div class="yellow" id="divTitleJs">
+      <h1 id="h1TitleJs">This is <strong>Javascript</strong></h1>
+   </div>
+   <br>
+   <div class="row">
+      <div class="col s12 m1"></div>
+      <div class="col s11 m4">
+         <blockquote style="border-left-color:#ffeb3b;">
+            <div class="row">
+               <div class="col s8">
+                  <strong >Variables</strong> are named values and can store any type of JavaScript value.
+               </div>
+               <div class="col s4 izq">
+                  <a class="waves-effect waves-light btn-small pulse black" href="/Html/vars.html">Let's Go</a>
+               </div>
+            </div>
+         </blockquote>
+      </div>
+      <div class="col s12 m1"></div>
+   </div>
+   <div class="row">
+      <div class="col s12 m1"></div>
+      <div class="col s11 m4">
+         <blockquote style="border-left-color:#ffeb3b;">
+            <div class="row">
+               <div class="col s8">
+                  <strong>Functions</strong> are blocks of code that can be named and reused..
+               </div>
+               <div class="col s4 izq">
+                  <a class="waves-effect waves-light btn-small pulse black" href="/Html/functions.html">Let's Go</a>
+               </div>
+            </div>
+         </blockquote>
+      </div>
+      <div class="s12 m1"></div>
+   </div>
+   </div>
+   </div>
 </body>
+
 </html>
+
+<style>
+   #divTitleJs {
+      margin-top: 5vh;
+   }
+
+   #h1TitleJs {
+      padding-top: 2vh;
+      padding-bottom: 2vh;
+      padding-left: 5vw;
+      padding-right: 0;
+      margin: 0;
+
+   }
+   .izq{
+      display:flex;
+      justify-content: flex-end;
+   }
+</style>
