--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   <strong >Variables</strong> are named values and can store any type of JavaScript value.
                </div>
                <div class="col s4 izq">
-                  <a class="waves-effect waves-light btn-small pulse black" href="/Html/vars.html">Let's Go</a>
+                  <a class="waves-effect waves-light btn-small pulse black" href="./Html/vars.html">Let's Go</a>
                </div>
             </div>
          </blockquote>
@@ -43,7 +43,7 @@
                   <strong>Functions</strong> are blocks of code that can be named and reused..
                </div>
                <div class="col s4 izq">
-                  <a class="waves-effect waves-light btn-small pulse black" href="/Html/functions.html">Let's Go</a>
+                  <a class="waves-effect waves-light btn-small pulse black" href="./Html/functions.html">Let's Go</a>
                </div>
             </div>
          </blockquote>
