--- a/Html/vars.html
+++ b/Html/vars.html
@@ -7,22 +7,68 @@
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <!-- Compiled and minified CSS -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
    <title>Test JS</title>
 </head>
 
 <body>
-      <div class="conatiner">
-            <div class="row">
-               <div class="col s1"></div>
-               <div class="col">
-                  <h1>Las variables se imprimen por consola</h1>
-               </div>
-               <div class="col s1"></div>
-            </div>
-         </div>
-   <script src="/Js/functions.js"></script>
+   <div class="yellow" id="divTitleJs">
+      <h1 id="h1TitleJs">See the console with <strong>F12</strong></h1>
+   </div>
+   <br>
+   <div class="row">
+      <div class="col s12 center-align">
+         <h2>The Code</h2>
+      </div>
+   </div>
+   <div class="row">
+      <div class="col s12 m4"></div>
+      <div class="col s12 m4">
+         <iframe src="/Js/vars.js" scrolling="auto">
+         </iframe>
+      </div>
+      <div class="col s12 m4"></div>
+   </div>
+   <br>
+   <div class="row center-align">
+      <div class="col s12">
+         <a class="waves-effect waves-light btn-small pulse black" href="/index.html">Return</a>
+      </div>
+
+
+
+      <script src="/Js/vars.js"></script>
 </body>
 
 </html>
+
+<style>
+   #divTitleJs {
+      margin-top: 5vh;
+   }
+
+   #h1TitleJs {
+      padding-top: 2vh;
+      padding-bottom: 2vh;
+      padding-left: 5vw;
+      padding-right: 0;
+      margin: 0;
+
+   }
+
+   .izq {
+      display: flex;
+      justify-content: flex-end;
+   }
+
+   .noWrap {
+      display: inline;
+   }
+   iframe {
+  display:block;
+  width:100%;
+  height:40vh;
+}
+</style>
