--- a/Html/vars.html
+++ b/Html/vars.html
@@ -26,7 +26,7 @@
    <div class="row">
       <div class="col s12 m4"></div>
       <div class="col s12 m4">
-         <iframe src="/Js/vars.js" scrolling="auto">
+         <iframe src="../Js/vars.js" scrolling="auto">
          </iframe>
       </div>
       <div class="col s12 m4"></div>
