--- a/index.html
+++ b/index.html
@@ -40,6 +40,22 @@
          <blockquote style="border-left-color:#ffeb3b;">
             <div class="row">
                <div class="col s8">
+                  <strong>Strings</strong> are variables, but this have more functions for the correct use.
+               </div>
+               <div class="col s4 izq">
+                  <a class="waves-effect waves-light btn-small pulse black" href="Html/strings.html">Let's Go</a>
+               </div>
+            </div>
+         </blockquote>
+      </div>
+      <div class="s12 m1"></div>
+   </div>
+   <div class="row">
+      <div class="col s12 m1"></div>
+      <div class="col s11 m4">
+         <blockquote style="border-left-color:#ffeb3b;">
+            <div class="row">
+               <div class="col s8">
                   <strong>Functions</strong> are blocks of code that can be named and reused..
                </div>
                <div class="col s4 izq">
