--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-   <title>Test JS</title>
+   <title>Test JS Lobby</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
          <blockquote style="border-left-color:#ffeb3b;">
             <div class="row">
                <div class="col s8">
-                  <strong >Variables</strong> are named values and can store any type of JavaScript value.
+                  <strong>Variables</strong> are named values and can store any type of JavaScript value.
                </div>
                <div class="col s4 izq">
                   <a class="waves-effect waves-light btn-small pulse black" href="Html/vars.html">Let's Go</a>
@@ -66,6 +66,23 @@
       </div>
       <div class="s12 m1"></div>
    </div>
+   <div class="row">
+      <div class="col s12 m1"></div>
+      <div class="col s11 m4">
+         <blockquote style="border-left-color:#ffeb3b;">
+            <div class="row">
+               <div class="col s8">
+                  <strong>Object</strong> are values that can contain other values. this is key-value, which
+                  are a lot like variables.
+               </div>
+               <div class="col s4 izq">
+                  <a class="waves-effect waves-light btn-small pulse black" href="Html/objects.html">Let's Go</a>
+               </div>
+            </div>
+         </blockquote>
+      </div>
+      <div class="s12 m1"></div>
+   </div>
    </div>
    </div>
 </body>
@@ -85,8 +102,9 @@
       margin: 0;
 
    }
-   .izq{
-      display:flex;
+
+   .izq {
+      display: flex;
       justify-content: flex-end;
    }
 </style>
