--- a/Html/objects.html
+++ b/Html/objects.html
@@ -10,7 +10,7 @@
    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-   <title>Test JS Vars</title>
+   <title>Test JS Objects</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
    <div class="row">
       <div class="col s12 m4"></div>
       <div class="col s12 m4">
-         <iframe src="../Js/vars.js" scrolling="auto">
+         <iframe src="../Js/objects.js" scrolling="auto">
          </iframe>
       </div>
       <div class="col s12 m4"></div>
@@ -39,7 +39,7 @@
 
 
 
-      <script src="/Js/vars.js"></script>
+      <script src="/Js/objects.js"></script>
 </body>
 
 </html>
