--- a/index.html
+++ b/index.html
@@ -83,6 +83,40 @@
       </div>
       <div class="s12 m1"></div>
    </div>
+   <div class="row">
+         <div class="col s12 m1"></div>
+         <div class="col s11 m4">
+            <blockquote style="border-left-color:#ffeb3b;">
+               <div class="row">
+                  <div class="col s8">
+                     <strong>Compairsons</strong> are values that can contain other values. this is key-value, which
+                     are a lot like variables.
+                  </div>
+                  <div class="col s4 izq">
+                     <a class="waves-effect waves-light btn-small pulse black" href="Html/comparisons.html">Let's Go</a>
+                  </div>
+               </div>
+            </blockquote>
+         </div>
+         <div class="s12 m1"></div>
+      </div>
+      <div class="row">
+            <div class="col s12 m1"></div>
+            <div class="col s11 m4">
+               <blockquote style="border-left-color:#ffeb3b;">
+                  <div class="row">
+                     <div class="col s8">
+                        <strong>Conditionals</strong> are values that can contain other values. this is key-value, which
+                        are a lot like variables.
+                     </div>
+                     <div class="col s4 izq">
+                        <a class="waves-effect waves-light btn-small pulse black" href="Html/conditionals.html">Let's Go</a>
+                     </div>
+                  </div>
+               </blockquote>
+            </div>
+            <div class="s12 m1"></div>
+         </div>
    </div>
    </div>
 </body>
